implementing new account and dashboard pages

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ NEXTAUTH_SECRET="logindobatman"
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+DATABASE_PASS="AdnMX8ehQcRlPA84"
